css/conditionals/voices-detail.css
/* ... */
@media (max-width: 46.5625em) and (max-width: 35.5em) {
  .node-type-voices .field-name-social-buttons-top .sharrre .count {
    font-size: 11px;
  }
}
.node-type-voices .social-media-wrapper {
  clear: left;
  display: block;
  border-top: 1px solid #979797;
  padding-top: 20px;
}
.node-type-voices .field-name-social-buttons-bottom {
  margin-top: 10px;
  padding: 0 20px 0 0;
}
.node-type-voices .sharrre .box .count {
  padding: 8px 15px 0 0;
}
.node-type-voices .short-url-wrapper {
  border-left: solid 1px #979797;
  margin-bottom: 0;
  padding-left: 20px;
  line-height: 2.18;
}
@media (max-width: 37.4375em) {
  .node-type-voices .short-url-wrapper {
    border-left: 0;
    padding-left: 0;
  }
}
.node-type-voices .short-url {
  line-height: 0.8;
  width: 225px;
}
.node-type-voices .field.field-name-social-buttons-bottom,
.node-type-voices .short-url-wrapper {
  display: inline-block;
}
.node-type-voices .short-url-wrapper {
  display: inline-block;
  height: 50px;
  padding-top: 5px;
}

.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body p {
  margin-bottom: 25px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body p:first-of-type {
  font-size: 24px;
}
@media (max-width: 35.5em) {
  .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body p:first-of-type {
    font-size: 18px;
  }
}
@media (min-width: 37.5em) and (max-width: 74.9375em) {
  .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body p:first-of-type {
    font-size: 18px;
  }
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body .file-resource-pull-quote {
  font-family: "NewsGothicBT-Light", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 24px;
  margin: 5px 30px 30px 0;
  width: 380px;
}

.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-academic-degrees,
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-professional-experience,
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-related-programs {
  font-size: 16px;
  line-height: 1.4;
  padding-bottom: 10px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-profile-links a {
  color: #636f00;
  font-size: 16px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-label {
  padding-left: 20px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-related-programs {
  padding-left: 20px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-related-programs-wrapper {
  border-bottom: 1px solid lightgray;
  padding-bottom: 10px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited {
  padding-top: 15px;
  padding-bottom: 15px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited div {
  margin-bottom: 0px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited:last-child {
  border-bottom: none !important;
  padding-bottom: 10px !important;
}

