WP-8576 fixes for the spacing

--- a/css/conditionals/voices-detail.css
+++ b/css/conditionals/voices-detail.css
@@ -856,9 +856,8 @@
   border-bottom: 1px solid lightgray;
   padding-bottom: 10px;
 }
-.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited .field-name-field-link-unlimited {
+  padding: 0 0 0 5px;
 }
 .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited div {
   margin-bottom: 0px;
@@ -866,4 +865,7 @@
 .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited:last-child {
   border-bottom: none !important;
   padding-bottom: 10px !important;
+}
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-person-ref-unlimited div.ds-1col:last-of-type {
+  padding-bottom: 18px;
 }
